--- a/rental-ui/rental-ui/src/app/component/menu/side-nav/side-nav.component.css
+++ b/rental-ui/rental-ui/src/app/component/menu/side-nav/side-nav.component.css
@@ -1,4 +1,238 @@
-.nav-container {
+.inventual-header-shortmenu {
+  position: relative;
+}
+.inventual-header-shortmenu .mat-icon {
+  font-size: 18px;
+  width: 18px !important;
+  height: inherit !important;
+  line-height: inherit;
+}
+@media (max-width: 359px) {
+  .inventual-header-shortmenu {
+      display: none;
+  }
+}
+.inventual-header-language-content ul li {
+  line-height: 1;
+}
+.inventual-header-language-content .mat-icon {
+  font-size: 18px;
+  transform: translateY(4px);
+  width: 14px !important;
+  --tw-text-opacity: 1;
+  color: rgb(97 97 97 / var(--tw-text-opacity));
+}
+.inventual-header-language-content {
+  transform: translateY(-2px);
+}
+.inventual-header-bar {
+  line-height: 1;
+}
+.custom-height-70 {
+  height: 70px;
+}
+.inventual-header-notify-wrapper svg {
+  min-width: 18px;
+}
+.inventual-header-profile-info .mat-icon {
+  font-size: 20px;
+  transform: translateY(4px);
+  width: 15px !important;
+  --tw-text-opacity: 1;
+  color: rgb(69 71 81 / var(--tw-text-opacity));
+  position: absolute;
+  top: -0.5rem;
+  right: 0;
+}
+.inventual-header-bar span {
+  margin-bottom: 1px;
+}
+.inventual-quick-pro-dropdown i {
+  margin-inline-end: 0.25rem;
+}
+.inventual-quick-dropdown {
+  position: absolute;
+  top: 100%;
+  inset-inline-start: 0px;
+  width: 220px;
+  box-shadow: 0 20px 40px #122a5b0d;
+  z-index: 9;
+  border-width: 1px;
+  border-style: solid;
+  --tw-border-opacity: 1;
+  border-color: rgb(235 235 235 / var(--tw-border-opacity));
+  padding: 0.75rem 1.25rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  opacity: 0;
+  transform: scale(0);
+  visibility: hidden;
+}
+.inventual-quick-dropdown.shortmenu-enable,
+.inventual-quick-dropdown.langmenu-enable,
+.inventual-quick-dropdown.promenu-enable {
+  opacity: 1;
+  visibility: visible;
+  transform: scale(1);
+}
+.inventual-quick-dropdown ul li {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+.inventual-quick-dropdown ul li a {
+  font-size: 14px;
+  font-weight: 400;
+  --tw-text-opacity: 1;
+  color: rgb(97 97 97 / var(--tw-text-opacity));
+  display: inline-block;
+  transition: all linear 0.3s;
+}
+.inventual-quick-dropdown ul li a:hover {
+  --tw-text-opacity: 1;
+  color: rgb(44 106 229 / var(--tw-text-opacity));
+}
+.inventual-quick-lang-dropdown {
+  width: 160px;
+}
+.inventual-quick-lang-dropdown.langmenu-enable {
+  inset-inline-start: auto;
+  inset-inline-end: 0px;
+  top: 45px;
+}
+.inventual-quick-pro-dropdown {
+  width: 195px;
+}
+.inventual-quick-pro-dropdown.promenu-enable {
+  inset-inline-start: auto;
+  inset-inline-end: 0px;
+  top: 59px;
+}
+.inventual-quick-pro-dropdown a {
+  display: inline-flex;
+  align-items: center;
+}
+.inventual-quick-pro-dropdown a .mat-icon {
+  width: 24px !important;
+  font-size: 16px;
+  transform: translateY(3px);
+}
+.inventual-notify-dropdown-list .inventual-notify-img {
+  width: 50px;
+  margin-inline-end: 1rem;
+  border-radius: 5px;
+}
+.inventual-notify-dropdown-list .inventual-notify-text h6 {
+  font-size: 14px;
+  font-weight: 600;
+  --tw-text-opacity: 1;
+  color: rgb(13 15 25 / var(--tw-text-opacity));
+  margin-bottom: 0.5rem;
+}
+.inventual-notify-dropdown-list .inventual-notify-text span {
+  font-size: 12px;
+  font-weight: 400;
+  --tw-text-opacity: 1;
+  color: rgb(97 97 97 / var(--tw-text-opacity));
+  display: block;
+}
+.inventual-notify-dropdown-list a {
+  --tw-text-opacity: 1;
+  color: rgb(97 97 97 / var(--tw-text-opacity));
+  display: inline-flex;
+}
+.inventual-notify-dropdown-list a:hover {
+  --tw-text-opacity: 1;
+  color: rgb(44 106 229 / var(--tw-text-opacity));
+}
+.inventual-notify-dropdown-list a .mat-icon {
+  font-size: 16px;
+  margin-inline-start: 0.25rem;
+}
+.inventual-notify-dropdown {
+  position: absolute;
+  top: 45px;
+  inset-inline-start: 0px;
+  width: 250px;
+  box-shadow: 0 20px 40px #122a5b0d;
+  z-index: 9;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  opacity: 0;
+  transform: scale(0);
+  visibility: hidden;
+}
+.inventual-notify-dropdown.notifydropdown-enable,
+.inventual-notify-dropdown.emaildropdown-enable {
+  opacity: 1;
+  visibility: visible;
+  transform: scale(1);
+}
+@media (max-width: 1400px) {
+  .inventual-notify-dropdown.notifydropdown-enable,
+  .inventual-notify-dropdown.emaildropdown-enable {
+      inset-inline-start: auto;
+      inset-inline-end: 0px;
+  }
+}
+@media (max-width: 400px) {
+  .inventual-notify-dropdown.notifydropdown-enable {
+      inset-inline-start: auto;
+      inset-inline-end: -80px;
+  }
+}
+@media (max-width: 360px) {
+  .inventual-notify-dropdown.notifydropdown-enable {
+      inset-inline-start: auto;
+      inset-inline-end: -130px;
+  }
+}
+@media (max-width: 400px) {
+  .inventual-notify-dropdown.emaildropdown-enable {
+      inset-inline-start: auto;
+      inset-inline-end: -40px;
+  }
+}
+@media (max-width: 360px) {
+  .inventual-notify-dropdown.emaildropdown-enable {
+      inset-inline-start: auto;
+      inset-inline-end: -90px;
+  }
+}
+.inventual-header-shortmenu a.short,
+.inventual-header-profile,
+.inventual-header-notification a.noti,
+.inventual-header-email .emai {
+  position: relative;
+  z-index: 9;
+}
+.inventual-header-language {
+  cursor: pointer;
+  position: relative;
+  z-index: 9;
+}
+.inventual-notify-dropdown,
+.inventual-quick-dropdown {
+  z-index: 9;
+}
+.inventual-header-overlay.shortmenu-enable,
+.inventual-header-overlay.notifydropdown-enable,
+.inventual-header-overlay.emaildropdown-enable,
+.inventual-header-overlay.langmenu-enable,
+.inventual-header-overlay.promenu-enable {
+  display: block;
+}
+.inventual-header-overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  inset-inline-start: 0px;
+  inset-inline-end: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 8;
+}
+
+/*.nav-container {
   display: flex;
   flex-direction: column;
   position: absolute;
@@ -43,3 +277,254 @@ mat-toolbar{
   color: black;
   border-bottom: 1px solid #dbdbdb;
 }
+*/
+
+/* sidebar menu css */ 
+
+.inventual-dashboard-area {
+  display: flex;
+}
+.inventual-dashboard-sidebar {
+  transition: all linear 0.3s;
+  min-width: 315px;
+  width: 315px;
+  position: relative;
+  margin-inline-start: 0px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  z-index: 10;
+}
+@media (min-width: 320px) and (max-width: 1900px) {
+  .inventual-dashboard-sidebar {
+      margin-inline-start: -315px;
+  }
+}
+.inventual-dashboard-sidebar .inventual-header-bar-responsive {
+  position: absolute;
+  top: 23px;
+  z-index: 11;
+  inset-inline-end: -60px;
+  display: inline-block;
+  cursor: pointer;
+  --tw-text-opacity: 1;
+  color: rgb(44 106 229 / var(--tw-text-opacity));
+  text-align: center;
+  height: 2rem;
+  width: 2rem;
+  line-height: 47px;
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 240 242 / var(--tw-bg-opacity));
+}
+@media (max-width: 767px) {
+  .inventual-dashboard-sidebar .inventual-header-bar-responsive {
+      inset-inline-end: -44px;
+  }
+}
+@media (max-width: 359px) {
+  .inventual-dashboard-sidebar .inventual-header-bar-responsive {
+      inset-inline-end: -45px;
+      top: 1.25rem;
+  }
+}
+.inventual-dashboard-sidebar .inventual-header-bar-responsive .mat-icon {
+  line-height: 0.6;
+  transform: translateY(4px);
+}
+.inventual-dashboard-main {
+  width: calc(100% - 315px);
+  transition: all linear 0.3s;
+}
+@media (min-width: 1201px) and (max-width: 1900px) {
+  .inventual-dashboard-main {
+      width: 100%;
+  }
+}
+@media (max-width: 1200px) {
+  .inventual-dashboard-main {
+      width: 100%;
+  }
+}
+.inventual-dashboard-sidebar.sidebar-enable {
+  margin-inline-start: -315px;
+}
+@media (min-width: 320px) and (max-width: 1900px) {
+  .inventual-dashboard-sidebar.sidebar-enable {
+      position: fixed;
+      top: 0;
+      inset-inline-start: 0px;
+      bottom: 0;
+      margin-inline-start: 0px;
+  }
+}
+.inventual-dashboard-main.sidebar-enable {
+  margin-inline-start: 0px;
+  width: 100%;
+}
+@media (max-width: 1900px) {
+  .inventual-menu-overlay.sidebar-enable {
+      position: fixed;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: 10;
+  }
+}
+.inventual-dashboard-main.sidebar-enable .apexcharts-canvas {
+  width: 100% !important;
+}
+.inventual-bar-chart h5 {
+  left: 50%;
+  transform: translate(-50%);
+  bottom: 25px;
+}
+.inventual-bar-chart h5 [dir="rtl"] {
+  transform: translate(50%);
+}
+.common-blue-badge {
+  height: 1.25rem;
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
+  --tw-bg-opacity: 1;
+  background-color: rgb(44 106 229 / var(--tw-bg-opacity));
+  border-radius: 3px;
+  display: inline-block;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+  font-size: 11px;
+  font-weight: 700;
+  line-height: 1.25rem;
+}
+@media (max-width: 1900px) {
+  .inventual-menu-overlay-dashboard.sidebar-enable {
+      position: fixed;
+      inset: 0;
+      background: rgba(0, 0, 0, 0.6);
+      z-index: 10;
+  }
+}
+/* sideMenu css */
+.inventual-menu-wrapper {
+  position: fixed;
+  top: 0;
+  inset-inline-start: 0px;
+  height: 100vh;
+  width: 315px;
+  min-width: 315px;
+  overflow-y: auto;
+  transition: all linear 0.3s;
+  z-index: 91;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+@media (max-width: 1900px) {
+  .inventual-menu-wrapper {
+      inset-inline-start: -320px;
+  }
+}
+@media (max-width: 1199px) {
+  .inventual-menu-wrapper {
+      width: 300px;
+      min-width: 300px;
+  }
+}
+.inventual-dashboard-sidebar.sidebar-enable .inventual-menu-wrapper {
+  inset-inline-start: -315px;
+}
+@media (max-width: 1900px) {
+  .inventual-dashboard-sidebar.sidebar-enable .inventual-menu-wrapper {
+      inset-inline-start: 0px;
+  }
+}
+.sidenav-nav {
+  margin: 0;
+  display: flex;
+  cursor: pointer;
+  list-style-type: none;
+  flex-direction: column;
+  align-items: center;
+}
+.sidenav-nav .sidenav-nav-item {
+  width: 100%;
+}
+.sidenav-nav .sidenav-nav-item .sidenav-nav-link {
+  transition: all linear 0.3s;
+  display: flex;
+  width: 100%;
+  align-items: center;
+  border-radius: 0.25rem;
+  padding: 1rem 1.25rem;
+  font-size: 15px;
+  font-weight: 600;
+  --tw-text-opacity: 1;
+  color: rgb(69 71 81 / var(--tw-text-opacity));
+}
+.sidenav-nav .sidenav-nav-item .sidenav-nav-link .sidenav-link-icon {
+  margin: 0;
+  width: 2rem;
+  min-width: 32px;
+  text-align: start;
+  font-size: 18px;
+  --tw-text-opacity: 1;
+  color: rgb(44 106 229 / var(--tw-text-opacity));
+}
+.sidenav-nav .sidenav-nav-item .sidenav-nav-link .sidenav-link-text {
+  margin-inline-start: 0.5rem;
+}
+.sidenav-nav .sidenav-nav-item .sidenav-nav-link.active {
+  --tw-bg-opacity: 1;
+  background-color: rgb(238 243 255 / var(--tw-bg-opacity));
+}
+.sidenav-nav .sidenav-nav-item .sidenav-nav-link.active .menu-collapse-icon,
+.sidenav-nav .sidenav-nav-item .sidenav-nav-link.active .sidenav-link-icon,
+.sidenav-nav .sidenav-nav-item .sidenav-nav-link.active .sidenav-link-text {
+  --tw-text-opacity: 1;
+  color: rgb(44 106 229 / var(--tw-text-opacity));
+}
+.sidenav-nav .sidenav-nav-item .sidenav-nav-link:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(238 243 255 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(44 106 229 / var(--tw-text-opacity));
+}
+.sidenav-nav .sidenav-nav-item .sidenav-nav-link:hover .menu-collapse-icon {
+  --tw-text-opacity: 1;
+  color: rgb(44 106 229 / var(--tw-text-opacity));
+}
+.menu-collapse-icon {
+  margin: auto;
+  margin-inline-end: 0px;
+  width: 1rem;
+  min-width: 16px;
+  text-align: end;
+  font-size: 18px;
+  --tw-text-opacity: 1;
+  color: rgb(69 71 81 / var(--tw-text-opacity));
+}
+
+.sidenav-nav,
+.scrollwrap:hover,
+.scrollwrap:focus {
+  visibility: visible;
+}
+.scrollwrap_delayed {
+  transition: visibility 0.5s 0.2s;
+}
+.scrollwrap_delayed:hover {
+  transition: visibility 0.2s 0.2s;
+}
+.scrollwrap::-webkit-scrollbar {
+  width: 10px;
+  display: none;
+}
+.scrollwrap::-webkit-scrollbar-track {
+  background: transparent;
+}
+.scrollwrap::-webkit-scrollbar-thumb {
+  background-color: #556268;
+  border-radius: 20px;
+}
+.scrollwrap {
+  scrollbar-width: thin;
+  scrollbar-color: #556268 transparent;
+}
+
+/* sideMenu css end */
