RNT-1 - Rental 7th april Commit changes

--- a/rental-ui/rental-ui/src/app/component/menu/main-content/main-content.component.html
+++ b/rental-ui/rental-ui/src/app/component/menu/main-content/main-content.component.html
@@ -17,7 +17,7 @@
     </div>
 </div>
 <div class="inventual-content-area px-7">
-  
+  <router-outlet></router-outlet>
 </div>
 <div class="inventual-copyright-area">
   <div  class="inventual-copyright text-center bg-blue h-20 leading-[80px] mt-20">
