RNT-1 - add edit user management flow changes

--- a/rental-ui/rental-ui/src/app/component/admin/user/add-edit-user-model/add-edit-user-model.component.html
+++ b/rental-ui/rental-ui/src/app/component/admin/user/add-edit-user-model/add-edit-user-model.component.html
@@ -1,3 +1,4 @@
+<p>add edit user works </p>
 <div class="model-width-4">
   @if(isEdit) {
   <h2 mat-dialog-title class="has-close-icon mat-dialog-header">
