--- a/rental-ui/rental-ui/src/app/component/admin/user/add-edit-user-model/add-edit-user-model.component.html
+++ b/rental-ui/rental-ui/src/app/component/admin/user/add-edit-user-model/add-edit-user-model.component.html
@@ -1,5 +1,256 @@
-<p>add edit user works </p>
-<div class="model-width-4">
+<div class="inventual-addsupplier-area bg-white p-7 custom-shadow rounded-8 mb-5">
+    @if(isEdit) {
+      <h4 class="text-[20px] font-bold text-black mb-9">Edit User</h4>
+    } @else {
+      <h4 class="text-[20px] font-bold text-black mb-9">Add New User</h4>
+    }
+  <div class="grid grid-cols-12 gap-x-7 sm:gap-x-0" [formGroup]="form">
+      <div class="col-span-4 md:col-span-6 sm:col-span-12">
+          <div class="inventual-select-field mb-5">
+              <h5 class="text-[15px] text-black font-semibold mb-3">First Name</h5>
+              <div class="inventual-input-field-style">
+                  <mat-form-field class="mat-mdc-form-field w-full  mat-mdc-form-field-type-mat-input mat-mdc-form-field-label-always-float mat-form-field-appearance-fill mat-primary ">
+                      
+                      <div class="mat-mdc-text-field-wrapper mdc-text-field  mdc-text-field--filled">
+                          <div class="mat-mdc-form-field-focus-overlay  "></div>
+                          
+                          <div class="mat-mdc-form-field-flex ">
+                              
+                              <div class="mat-mdc-form-field-infix ">
+                                  <label
+                                      matformfieldfloatinglabel=""
+                                      class="mdc-floating-label mat-mdc-floating-label  mdc-floating-label--float-above "
+                                      id="mat-mdc-form-field-label-4"
+                                      for="mat-input-2">
+                                      <!-- <mat-label class="hidden ">Joseph Tylor</mat-label> -->
+                                      
+                                  </label>
+                                  
+                                  <input
+                                      matInput
+                                      class="mat-mdc-input-element  mat-mdc-form-field-input-control mdc-text-field__input cdk-text-field-autofill-monitored"
+                                      placeholder="Enter the First Name"
+                                      id="mat-input-2"
+                                      aria-invalid="false"
+                                      aria-required="false" formControlName="firstName"
+                                  />
+                              </div>
+                              
+                          </div>
+                          <div matformfieldlineripple="" class="mdc-line-ripple  mdc-line-ripple--deactivating "></div>
+                          
+                      </div>
+                      <div class="mat-mdc-form-field-subscript-wrapper mat-mdc-form-field-bottom-align ">
+                          
+                          <div class="mat-mdc-form-field-hint-wrapper    " style="opacity: 1; transform: translateY(0%);">
+                              
+                              <div class="mat-mdc-form-field-hint-spacer "></div>
+                          </div>
+                          
+                      </div>
+                  </mat-form-field>
+              </div>
+          </div>
+      </div>
+      <div class="col-span-4 md:col-span-6 sm:col-span-12">
+          <div class="inventual-select-field mb-5">
+              <h5 class="text-[15px] text-black font-semibold mb-3">Last Name</h5>
+              <div class="inventual-input-field-style">
+                  <mat-form-field class="mat-mdc-form-field w-full  mat-mdc-form-field-type-mat-input mat-mdc-form-field-label-always-float mat-form-field-appearance-fill mat-primary ">
+                      
+                      <div class="mat-mdc-text-field-wrapper mdc-text-field  mdc-text-field--filled">
+                          <div class="mat-mdc-form-field-focus-overlay  "></div>
+                          
+                          <div class="mat-mdc-form-field-flex ">
+                              
+                              <div class="mat-mdc-form-field-infix ">
+                                  <label
+                                      matformfieldfloatinglabel=""
+                                      class="mdc-floating-label mat-mdc-floating-label  mdc-floating-label--float-above "
+                                      id="mat-mdc-form-field-label-6"
+                                      for="mat-input-3"
+                                  >
+                                      <!-- <mat-label class="hidden ">00 000 000 000</mat-label> -->
+                                      
+                                  </label>
+                                  
+                                  <input
+                                      matInput
+                                      class="mat-mdc-input-element  mat-mdc-form-field-input-control mdc-text-field__input cdk-text-field-autofill-monitored"
+                                      placeholder="Enter the Last Name" 
+                                      id="mat-input-3"
+                                      aria-invalid="false"
+                                      aria-required="false"
+                                      formControlName="lastName"
+                                  />
+                              </div>
+                              
+                          </div>
+                          <div matformfieldlineripple="" class="mdc-line-ripple   mdc-line-ripple--active mdc-line-ripple--deactivating"></div>
+                          
+                      </div>
+                      <div class="mat-mdc-form-field-subscript-wrapper mat-mdc-form-field-bottom-align ">
+                          
+                          <div class="mat-mdc-form-field-hint-wrapper    " style="opacity: 1; transform: translateY(0%);">
+                              
+                              <div class="mat-mdc-form-field-hint-spacer "></div>
+                          </div>
+                          
+                      </div>
+                  </mat-form-field>
+              </div>
+          </div>
+      </div>
+      <div class="col-span-4 md:col-span-6 sm:col-span-12">
+          <div class="inventual-select-field mb-5">
+              <h5 class="text-[15px] text-black font-semibold mb-3">Email</h5>
+              <div class="inventual-input-field-style">
+                  <mat-form-field class="mat-mdc-form-field w-full  mat-mdc-form-field-type-mat-input mat-mdc-form-field-label-always-float mat-form-field-appearance-fill mat-primary ">
+                      
+                      <div class="mat-mdc-text-field-wrapper mdc-text-field  mdc-text-field--filled">
+                          <div class="mat-mdc-form-field-focus-overlay  "></div>
+                          
+                          <div class="mat-mdc-form-field-flex ">
+                              
+                              <div class="mat-mdc-form-field-infix ">
+                                  <label
+                                      matformfieldfloatinglabel=""
+                                      class="mdc-floating-label mat-mdc-floating-label  mdc-floating-label--float-above "
+                                      id="mat-mdc-form-field-label-8"
+                                      for="mat-input-4"
+                                  >
+                                      <!-- <mat-label class="hidden ">josephexample.com</mat-label> -->
+                                      
+                                  </label>
+                                  
+                                  <input
+                                      type="email"
+                                      matInput
+                                      class="mat-mdc-input-element  mat-mdc-form-field-input-control mdc-text-field__input cdk-text-field-autofill-monitored"
+                                      placeholder="Enter the Email" type="email"
+                                      id="mat-input-4"
+                                      aria-invalid="false"
+                                      aria-required="false"
+                                      formControlName="email"
+                                      #email
+                                  />
+                              </div>
+                              
+                          </div>
+                          <div matformfieldlineripple="" class="mdc-line-ripple  mdc-line-ripple--deactivating "></div>
+                          
+                      </div>
+                      <div class="mat-mdc-form-field-subscript-wrapper mat-mdc-form-field-bottom-align ">
+                          
+                          <div class="mat-mdc-form-field-hint-wrapper    " style="opacity: 1; transform: translateY(0%);">
+                              
+                              <div class="mat-mdc-form-field-hint-spacer "></div>
+                          </div>
+                          
+                      </div>
+                  </mat-form-field>
+              </div>
+          </div>
+      </div>
+      <div class="col-span-4 md:col-span-6 sm:col-span-12">
+          <div class="inventual-select-field mb-5">
+              <h5 class="text-[15px] text-black font-semibold mb-3">User Type</h5>
+              <div class="inventual-select-field-style">
+                  <mat-form-field class="mat-mdc-form-field mat-mdc-form-field-type-mat-select mat-form-field-appearance-fill mat-primary ">
+                      
+                      <div class="mat-mdc-text-field-wrapper  mdc-text-field mdc-text-field--filled mdc-text-field--no-label">
+                          <div class="mat-mdc-form-field-focus-overlay  "></div>
+                          
+                          <div class="mat-mdc-form-field-flex ">
+                              
+                              <div class="mat-mdc-form-field-infix ">
+                                <mat-label>Select UserType</mat-label>
+                                <mat-select formControlName="userType">
+                                  @for (usertype of userTypes; track usertype) {
+                                  <mat-option class="rnt-select-panel" [value]="usertype">{{usertype | removeSpecialChar | titlecase }}</mat-option>
+                                  }
+                                </mat-select>
+                                  
+                              </div>
+                              
+                          </div>
+                          <div matformfieldlineripple="" class="mdc-line-ripple  mdc-line-ripple--deactivating "></div>
+                          
+                      </div>
+                      <div class="mat-mdc-form-field-subscript-wrapper mat-mdc-form-field-bottom-align ">
+                          
+                          <div class="mat-mdc-form-field-hint-wrapper    " style="opacity: 1; transform: translateY(0%);">
+                              
+                              <div class="mat-mdc-form-field-hint-spacer "></div>
+                          </div>
+                          
+                      </div>
+                  </mat-form-field>
+              </div>
+          </div>
+      </div>
+      <div class="col-span-4 md:col-span-6 sm:col-span-12">
+          <div class="inventual-select-field mb-5">
+              <h5 class="text-[15px] text-black font-semibold mb-3">Status</h5>
+              <div class="inventual-select-field-style">
+                  <mat-form-field class="mat-mdc-form-field  mat-mdc-form-field-type-mat-select mat-form-field-appearance-fill mat-primary ">
+                      
+                      <div class="mat-mdc-text-field-wrapper mdc-text-field  mdc-text-field--filled mdc-text-field--no-label">
+                          <div class="mat-mdc-form-field-focus-overlay  "></div>
+                          
+                          <div class="mat-mdc-form-field-flex ">
+                              
+                              <div class="mat-mdc-form-field-infix ">
+                                <mat-label>Select Status</mat-label>
+                                <mat-select formControlName="status">
+                                  @for (s of status; track s) {
+                                  <mat-option [value]="s">{{s | titlecase }}</mat-option>
+                                  }
+                                </mat-select>
+                              </div>
+                              
+                          </div>
+                          <div matformfieldlineripple="" class="mdc-line-ripple  mdc-line-ripple--deactivating "></div>
+                          
+                      </div>
+                      <div class="mat-mdc-form-field-subscript-wrapper mat-mdc-form-field-bottom-align ">
+                          
+                          <div class="mat-mdc-form-field-hint-wrapper    " style="opacity: 1; transform: translateY(0%);">
+                              
+                              <div class="mat-mdc-form-field-hint-spacer "></div>
+                          </div>
+                          
+                      </div>
+                  </mat-form-field>
+              </div>
+          </div>
+      </div>
+      <!-- <div class="col-span-4 md:col-span-6 sm:col-span-12">
+          <div class="inventual-select-field mb-5">
+              <h5 class="text-[15px] text-black font-semibold mb-3">Profile Image</h5>
+              <div class="inventual-input-field-style relative">
+                  <div class="inventual-input-field-file-choose"><label for="fileUploadN">Choose File</label><input type="file" id="fileUploadN" /></div>
+              </div>
+          </div>
+      </div> -->
+      <div class="col-span-12">
+        <app-add-edit-address #addressComponenet></app-add-edit-address>
+      </div>
+      <div class="col-span-12">
+          <div class="inventual-material-btn pt-2.5">
+              <button mat-raised-button="" color="primary" mat-ripple-loader-class-name="mat-mdc-button-ripple" class="mdc-button mdc-button--raised mat-mdc-raised-button mat-primary mat-mdc-button-base">
+                  <span class="mat-mdc-button-persistent-ripple mdc-button__ripple"></span><span class="mdc-button__label">Create Now</span><span class="mat-mdc-focus-indicator"></span><span class="mat-mdc-button-touch-target"></span>
+                  <span class="mat-ripple mat-mdc-button-ripple"></span>
+              </button>
+          </div>
+      </div>
+  </div>
+</div>
+
+
+
+
+<!--<div class="model-width-4">
   @if(isEdit) {
   <h2 mat-dialog-title class="has-close-icon mat-dialog-header">
     Edit User
@@ -10,7 +261,7 @@
   </h2>
   }
 
-  <mat-dialog-content class="mat-typography-dialog" [formGroup]="form">
+  <div [formGroup]="form">
     <div class="row p-2">
       <mat-card>
         <mat-card-content [formGroup]="form">
@@ -68,9 +319,9 @@
         <app-add-edit-address #addressComponenet></app-add-edit-address>
       </mat-card>
     </div>
-  </mat-dialog-content>
+  </div> 
   <mat-dialog-actions align="end" class="mt-2 mb-2 mat-dialog-action-footer">
     <button mat-flat-button color="basic" mat-dialog-close>Cancel</button>
     <button mat-flat-button color="accent" [disabled]="!form.valid" (click)="submit()">Submit</button>
   </mat-dialog-actions>
-</div>
+</div>-->
