--- a/rental-ui/rental-ui/src/app/component/admin/user/add-edit-user-model/add-edit-user-model.component.html
+++ b/rental-ui/rental-ui/src/app/component/admin/user/add-edit-user-model/add-edit-user-model.component.html
@@ -9,94 +9,8 @@
           <div class="inventual-select-field mb-5">
               <h5 class="text-[15px] text-black font-semibold mb-3">First Name</h5>
               <div class="inventual-input-field-style">
-                  <mat-form-field class="mat-mdc-form-field w-full  mat-mdc-form-field-type-mat-input mat-mdc-form-field-label-always-float mat-form-field-appearance-fill mat-primary ">
-                      
-                      <div class="mat-mdc-text-field-wrapper mdc-text-field  mdc-text-field--filled">
-                          <div class="mat-mdc-form-field-focus-overlay  "></div>
-                          
-                          <div class="mat-mdc-form-field-flex ">
-                              
-                              <div class="mat-mdc-form-field-infix ">
-                                  <label
-                                      matformfieldfloatinglabel=""
-                                      class="mdc-floating-label mat-mdc-floating-label  mdc-floating-label--float-above "
-                                      id="mat-mdc-form-field-label-4"
-                                      for="mat-input-2">
-                                      <!-- <mat-label class="hidden ">Joseph Tylor</mat-label> -->
-                                      
-                                  </label>
-                                  
-                                  <input
-                                      matInput
-                                      class="mat-mdc-input-element  mat-mdc-form-field-input-control mdc-text-field__input cdk-text-field-autofill-monitored"
-                                      placeholder="Enter the First Name"
-                                      id="mat-input-2"
-                                      aria-invalid="false"
-                                      aria-required="false" formControlName="firstName"
-                                  />
-                              </div>
-                              
-                          </div>
-                          <div matformfieldlineripple="" class="mdc-line-ripple  mdc-line-ripple--deactivating "></div>
-                          
-                      </div>
-                      <div class="mat-mdc-form-field-subscript-wrapper mat-mdc-form-field-bottom-align ">
-                          
-                          <div class="mat-mdc-form-field-hint-wrapper    " style="opacity: 1; transform: translateY(0%);">
-                              
-                              <div class="mat-mdc-form-field-hint-spacer "></div>
-                          </div>
-                          
-                      </div>
-                  </mat-form-field>
-              </div>
-          </div>
-      </div>
-      <div class="col-span-4 md:col-span-6 sm:col-span-12">
-          <div class="inventual-select-field mb-5">
-              <h5 class="text-[15px] text-black font-semibold mb-3">Last Name</h5>
-              <div class="inventual-input-field-style">
-                  <mat-form-field class="mat-mdc-form-field w-full  mat-mdc-form-field-type-mat-input mat-mdc-form-field-label-always-float mat-form-field-appearance-fill mat-primary ">
-                      
-                      <div class="mat-mdc-text-field-wrapper mdc-text-field  mdc-text-field--filled">
-                          <div class="mat-mdc-form-field-focus-overlay  "></div>
-                          
-                          <div class="mat-mdc-form-field-flex ">
-                              
-                              <div class="mat-mdc-form-field-infix ">
-                                  <label
-                                      matformfieldfloatinglabel=""
-                                      class="mdc-floating-label mat-mdc-floating-label  mdc-floating-label--float-above "
-                                      id="mat-mdc-form-field-label-6"
-                                      for="mat-input-3"
-                                  >
-                                      <!-- <mat-label class="hidden ">00 000 000 000</mat-label> -->
-                                      
-                                  </label>
-                                  
-                                  <input
-                                      matInput
-                                      class="mat-mdc-input-element  mat-mdc-form-field-input-control mdc-text-field__input cdk-text-field-autofill-monitored"
-                                      placeholder="Enter the Last Name" 
-                                      id="mat-input-3"
-                                      aria-invalid="false"
-                                      aria-required="false"
-                                      formControlName="lastName"
-                                  />
-                              </div>
-                              
-                          </div>
-                          <div matformfieldlineripple="" class="mdc-line-ripple   mdc-line-ripple--active mdc-line-ripple--deactivating"></div>
-                          
-                      </div>
-                      <div class="mat-mdc-form-field-subscript-wrapper mat-mdc-form-field-bottom-align ">
-                          
-                          <div class="mat-mdc-form-field-hint-wrapper    " style="opacity: 1; transform: translateY(0%);">
-                              
-                              <div class="mat-mdc-form-field-hint-spacer "></div>
-                          </div>
-                          
-                      </div>
+                <mat-form-field  class="w-full">
+                    <input matInput type="text" autocomplete="off" formControlName="firstName" placeholder="Enter the First Name">
                   </mat-form-field>
               </div>
           </div>
@@ -105,49 +19,8 @@
           <div class="inventual-select-field mb-5">
               <h5 class="text-[15px] text-black font-semibold mb-3">Email</h5>
               <div class="inventual-input-field-style">
-                  <mat-form-field class="mat-mdc-form-field w-full  mat-mdc-form-field-type-mat-input mat-mdc-form-field-label-always-float mat-form-field-appearance-fill mat-primary ">
-                      
-                      <div class="mat-mdc-text-field-wrapper mdc-text-field  mdc-text-field--filled">
-                          <div class="mat-mdc-form-field-focus-overlay  "></div>
-                          
-                          <div class="mat-mdc-form-field-flex ">
-                              
-                              <div class="mat-mdc-form-field-infix ">
-                                  <label
-                                      matformfieldfloatinglabel=""
-                                      class="mdc-floating-label mat-mdc-floating-label  mdc-floating-label--float-above "
-                                      id="mat-mdc-form-field-label-8"
-                                      for="mat-input-4"
-                                  >
-                                      <!-- <mat-label class="hidden ">josephexample.com</mat-label> -->
-                                      
-                                  </label>
-                                  
-                                  <input
-                                      type="email"
-                                      matInput
-                                      class="mat-mdc-input-element  mat-mdc-form-field-input-control mdc-text-field__input cdk-text-field-autofill-monitored"
-                                      placeholder="Enter the Email" type="email"
-                                      id="mat-input-4"
-                                      aria-invalid="false"
-                                      aria-required="false"
-                                      formControlName="email"
-                                      #email
-                                  />
-                              </div>
-                              
-                          </div>
-                          <div matformfieldlineripple="" class="mdc-line-ripple  mdc-line-ripple--deactivating "></div>
-                          
-                      </div>
-                      <div class="mat-mdc-form-field-subscript-wrapper mat-mdc-form-field-bottom-align ">
-                          
-                          <div class="mat-mdc-form-field-hint-wrapper    " style="opacity: 1; transform: translateY(0%);">
-                              
-                              <div class="mat-mdc-form-field-hint-spacer "></div>
-                          </div>
-                          
-                      </div>
+                  <mat-form-field  class="w-full">
+                    <input matInput type="email" autocomplete="off" formControlName="email" placeholder="Enter the Email">
                   </mat-form-field>
               </div>
           </div>
@@ -156,36 +29,13 @@
           <div class="inventual-select-field mb-5">
               <h5 class="text-[15px] text-black font-semibold mb-3">User Type</h5>
               <div class="inventual-select-field-style">
-                  <mat-form-field class="mat-mdc-form-field mat-mdc-form-field-type-mat-select mat-form-field-appearance-fill mat-primary ">
-                      
-                      <div class="mat-mdc-text-field-wrapper  mdc-text-field mdc-text-field--filled mdc-text-field--no-label">
-                          <div class="mat-mdc-form-field-focus-overlay  "></div>
-                          
-                          <div class="mat-mdc-form-field-flex ">
-                              
-                              <div class="mat-mdc-form-field-infix ">
-                                <mat-label>Select UserType</mat-label>
-                                <mat-select formControlName="userType">
-                                  @for (usertype of userTypes; track usertype) {
-                                  <mat-option class="rnt-select-panel" [value]="usertype">{{usertype | removeSpecialChar | titlecase }}</mat-option>
-                                  }
-                                </mat-select>
-                                  
-                              </div>
-                              
-                          </div>
-                          <div matformfieldlineripple="" class="mdc-line-ripple  mdc-line-ripple--deactivating "></div>
-                          
-                      </div>
-                      <div class="mat-mdc-form-field-subscript-wrapper mat-mdc-form-field-bottom-align ">
-                          
-                          <div class="mat-mdc-form-field-hint-wrapper    " style="opacity: 1; transform: translateY(0%);">
-                              
-                              <div class="mat-mdc-form-field-hint-spacer "></div>
-                          </div>
-                          
-                      </div>
-                  </mat-form-field>
+                <mat-form-field>
+                <mat-select formControlName="userType" placeholder="Select UserType">
+                    @for (usertype of userTypes; track usertype) {
+                    <mat-option class="rnt-select-panel" [value]="usertype">{{usertype | removeSpecialChar | titlecase }}</mat-option>
+                    }
+                </mat-select>
+                </mat-form-field>
               </div>
           </div>
       </div>
@@ -193,35 +43,14 @@
           <div class="inventual-select-field mb-5">
               <h5 class="text-[15px] text-black font-semibold mb-3">Status</h5>
               <div class="inventual-select-field-style">
-                  <mat-form-field class="mat-mdc-form-field  mat-mdc-form-field-type-mat-select mat-form-field-appearance-fill mat-primary ">
-                      
-                      <div class="mat-mdc-text-field-wrapper mdc-text-field  mdc-text-field--filled mdc-text-field--no-label">
-                          <div class="mat-mdc-form-field-focus-overlay  "></div>
-                          
-                          <div class="mat-mdc-form-field-flex ">
-                              
-                              <div class="mat-mdc-form-field-infix ">
-                                <mat-label>Select Status</mat-label>
-                                <mat-select formControlName="status">
-                                  @for (s of status; track s) {
-                                  <mat-option [value]="s">{{s | titlecase }}</mat-option>
-                                  }
-                                </mat-select>
-                              </div>
-                              
-                          </div>
-                          <div matformfieldlineripple="" class="mdc-line-ripple  mdc-line-ripple--deactivating "></div>
-                          
-                      </div>
-                      <div class="mat-mdc-form-field-subscript-wrapper mat-mdc-form-field-bottom-align ">
-                          
-                          <div class="mat-mdc-form-field-hint-wrapper    " style="opacity: 1; transform: translateY(0%);">
-                              
-                              <div class="mat-mdc-form-field-hint-spacer "></div>
-                          </div>
-                          
-                      </div>
-                  </mat-form-field>
+                <mat-form-field>
+                    <mat-select formControlName="status" placeholder="Select Status">
+                        @for (s of status; track s) {
+                        <mat-option [value]="s">{{s | titlecase }}</mat-option>
+                        }
+                      </mat-select>
+                    </mat-form-field>
+                  
               </div>
           </div>
       </div>
