RNT-1 - product list ui changes

--- a/rental-ui/rental-ui/src/app/component/admin/user/user.component.html
+++ b/rental-ui/rental-ui/src/app/component/admin/user/user.component.html
@@ -16,7 +16,7 @@
                     <span><mat-icon role="img" class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color" aria-hidden="true" data-mat-icon-type="font">search</mat-icon></span>
                 </div>
             </div>
-            <div class="col-span-7 md:col-span-6 sm:col-span-12">
+            <!-- <div class="col-span-7 md:col-span-6 sm:col-span-12">
                 <div class="inventual-table-header-search-action-btn text-end sm:text-start">
                     <button type="button" class="mat-mdc-menu-trigger filter" aria-haspopup="menu" aria-expanded="false">
                         <svg id="filter" xmlns="http://www.w3.org/2000/svg" width="15.766" height="13.34" viewBox="0 0 15.766 13.34">
@@ -124,7 +124,7 @@
                         </svg>
                     </button>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <div class="table-container mat-elevation-z8">
