--- a/rental-ui/rental-ui/src/app/component/menu/main-content/main-content.component.html
+++ b/rental-ui/rental-ui/src/app/component/menu/main-content/main-content.component.html
@@ -16,7 +16,7 @@
         </div>
     </div>
 </div>
-<div class="inventual-content-area px-7">
+<div class="main-content inventual-content-area px-7">
   <router-outlet></router-outlet>
 </div>
 <div class="inventual-copyright-area">
