RNT-1 - UI defect fix changes

--- a/rental-ui/rental-ui/src/app/component/admin/user/add-edit-user-model/add-edit-user-model.component.css
+++ b/rental-ui/rental-ui/src/app/component/admin/user/add-edit-user-model/add-edit-user-model.component.css
@@ -233,6 +233,9 @@
     flex-wrap: wrap;
     gap: 1.25rem;
 }
+.pull-right-btn{
+    float:right;
+}
 .inventual-material-btn .mdc-button {
     height: 3rem;
     min-width: 0px;
