--- a/rental-ui/rental-ui/src/app/component/admin/user/add-edit-user-model/add-edit-user-model.component.html
+++ b/rental-ui/rental-ui/src/app/component/admin/user/add-edit-user-model/add-edit-user-model.component.html
@@ -1,8 +1,8 @@
-<div class="inventual-addsupplier-area bg-white p-7 custom-shadow rounded-8 mb-5">
+<div class="inventual-addsupplier-area bg-white p-5 custom-shadow rounded-8 mb-5">
     @if(isEdit) {
-      <h4 class="text-[20px] font-bold text-black mb-9">Edit User</h4>
+      <h4 class="text-[20px] font-bold text-black mb-3">Edit User</h4>
     } @else {
-      <h4 class="text-[20px] font-bold text-black mb-9">Add New User</h4>
+      <h4 class="text-[20px] font-bold text-black mb-3">Add New User</h4>
     }
   <div class="grid grid-cols-12 gap-x-7 sm:gap-x-0" [formGroup]="form">
       <div class="col-span-4 md:col-span-6 sm:col-span-12">
@@ -40,7 +40,7 @@
               <h5 class="text-[15px] text-black font-semibold mb-3">User Type</h5>
               <div class="inventual-select-field-style">
                 <mat-form-field>
-                <mat-select formControlName="userType" placeholder="Select UserType">
+                <mat-select formControlName="userType" placeholder="Select UserType" multiple>
                     @for (usertype of userTypes; track usertype) {
                     <mat-option class="rnt-select-panel" [value]="usertype">{{usertype | removeSpecialChar | titlecase }}</mat-option>
                     }
@@ -64,6 +64,33 @@
               </div>
           </div>
       </div>
+
+      <div class="col-span-4 md:col-span-6 sm:col-span-12">
+        <div class="inventual-select-field mb-5">
+            <h5 class="text-[15px] text-black font-semibold mb-3">Gender</h5>
+            <div class="inventual-select-field-style">
+              <mat-form-field>
+                  <mat-select formControlName="gender" placeholder="Select Gender">
+                      @for (g of gender; track g) {
+                      <mat-option [value]="g">{{g | titlecase }}</mat-option>
+                      }
+                    </mat-select>
+                  </mat-form-field>
+                
+            </div>
+        </div>
+    </div>
+
+    <div class="col-span-4 md:col-span-6 sm:col-span-12">
+      <div class="inventual-select-field mb-5">
+          <h5 class="text-[15px] text-black font-semibold mb-3">Contact Number</h5>
+          <div class="inventual-input-field-style">
+              <mat-form-field  class="w-full">
+                <input matInput type="number" autocomplete="off" formControlName="contactnumber" placeholder="Enter the Contact No">
+              </mat-form-field>
+          </div>
+      </div>
+    </div>
       <!-- <div class="col-span-4 md:col-span-6 sm:col-span-12">
           <div class="inventual-select-field mb-5">
               <h5 class="text-[15px] text-black font-semibold mb-3">Profile Image</h5>
@@ -72,13 +99,13 @@
               </div>
           </div>
       </div> -->
-      <div class="col-span-12">
+      <!-- <div class="col-span-12">
         <app-add-edit-address #addressComponenet></app-add-edit-address>
-      </div>
+      </div> -->
       <div class="col-span-12">
-          <div class="inventual-material-btn pt-2.5">
+          <div class="inventual-material-btn pt-2.5 pull-right-btn">
               <button mat-raised-button="" color="primary" mat-ripple-loader-class-name="mat-mdc-button-ripple" class="mdc-button mdc-button--raised mat-mdc-raised-button mat-primary mat-mdc-button-base" [disabled]="!form.valid" (click)="submit()">
-                  <span class="mat-mdc-button-persistent-ripple mdc-button__ripple"></span><span class="mdc-button__label">Create Now</span><span class="mat-mdc-focus-indicator"></span><span class="mat-mdc-button-touch-target"></span>
+                  <span class="mat-mdc-button-persistent-ripple mdc-button__ripple"></span><span class="mdc-button__label">Submit</span><span class="mat-mdc-focus-indicator"></span><span class="mat-mdc-button-touch-target"></span>
                   <span class="mat-ripple mat-mdc-button-ripple"></span>
               </button>
           </div>
