--- a/rental-ui/rental-ui/src/app/component/common/add-edit-address/add-edit-address.component.html
+++ b/rental-ui/rental-ui/src/app/component/common/add-edit-address/add-edit-address.component.html
@@ -6,7 +6,7 @@
   <div class="row">
     <div class="col-12 table-responsive"> -->
       <div class="col-span-12">
-        <div class="inventual-material-btn mb-7">
+        <div class="inventual-material-btn mb-7 pull-right-btn">
           <button mat-raised-button="" color="primary" class="mb-1 mdc-button mdc-button--raised mat-mdc-raised-button mat-primary mat-mdc-button-base rnt-add-address" mat-ripple-loader-class-name="mat-mdc-button-ripple" tabindex="0" (click)="addAddress()">
               <span class="mat-mdc-button-persistent-ripple mdc-button__ripple"></span>
               <mat-icon role="img" class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color" aria-hidden="true" data-mat-icon-type="font">add_circle_outline</mat-icon><span class="mdc-button__label"> Add Address</span>
