--- a/rental-ui/rental-ui/src/app/component/menu/side-nav/side-nav.component.html
+++ b/rental-ui/rental-ui/src/app/component/menu/side-nav/side-nav.component.html
@@ -4,7 +4,7 @@
 
 
 <div class="inventual-dashboard-sidebar" [ngClass]="{'sidebar-enable': menuSidebarActive}">
-    <div class="inventual-header-bar-responsive" >
+    <div class="inventual-header-bar-responsive rental-header-bar-nav-icon" >
        <mat-icon role="img" class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color" aria-hidden="true" data-mat-icon-type="font"  (click)="sidemenuToggle()">reorder</mat-icon>
     </div>
     <div class="inventual-menu-wrapper bg-white border-e border-b border-solid border-gray-border py-10 px-7 lg:px-5 lg:py-8">
@@ -49,7 +49,7 @@
             <div class="grid grid-cols-12 items-center h-full">
                 <div class="col-span-12">
                     <div class="inventual-header-content flex items-center justify-end custom-height-70">
-                        <div  class="inventual-header-shortmenu pe-5 sm:pe-4 border-e items-center flex flex-col justify-center border-gray-border border-solid custom-height-70">
+                        <!-- <div  class="inventual-header-shortmenu pe-5 sm:pe-4 border-e items-center flex flex-col justify-center border-gray-border border-solid custom-height-70">
                             <a  href="javascript:void(0)" class="h-10 w-10 leading-[38px] border border-gray-borderTwo border-solid text-center inline-block rounded-[3px] text-gray-lightTwo short" (click)="shortmenu()">
                                <mat-icon  role="img" class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color" aria-hidden="true" data-mat-icon-type="font">add</mat-icon>
                             </a>
@@ -66,7 +66,7 @@
                                   <li ><a  href="/people/addcustomer">Add Customer</a></li>
                                </ul>
                             </div>
-                         </div>
+                         </div> -->
     
                          <div  class="inventual-header-profile relative ps-5 flex flex-wrap items-center pe-11 sm:pe-0 md:pe-0">
                             <div  class="inventual-header-profile-img w-12 sm:me-0 md:me-0 cursor-pointer">
