menu changes completed

--- a/rental-ui/rental-ui/src/app/component/menu/main-content/main-content.component.html
+++ b/rental-ui/rental-ui/src/app/component/menu/main-content/main-content.component.html
@@ -1,26 +1,3 @@
-<!--<div class="container-fluid page">
-    <div class="d-flex page box p-3 mt-2">{{title}}</div>
-    <div class="page content shadow p-3 position-relative">
-      <div class="page content-data position-absolute text-center">
-        <router-outlet></router-outlet>
-      </div>
-    </div>
-  </div>-->
-
-  <div class="inventual-breadcrumb-area px-7 py-9 bg-white mb-5">
-    <div class="inventual-breadcrumb-area-inner px-0.5">
-        <h5 class="text-[20px] text-black font-bold mb-3">{{title}}</h5>
-        <div class="inventual-breadcrumb-area-inner-wrap">
-            <span class="text-[14px] text-gray font-normal inline-block me-2">User Management</span><span class="text-[14px] text-gray font-normal inline-block me-2">&gt;</span>
-            <span class="text-[14px] text-gray font-normal inline-block me-2">User List</span>
-        </div>
-    </div>
-</div>
-<div class="main-content inventual-content-area px-7">
+<div class="main-content inventual-content-area">
   <router-outlet></router-outlet>
-</div>
-<div class="inventual-copyright-area">
-  <div  class="inventual-copyright text-center bg-blue h-20 leading-[80px] mt-20">
-    <span  class="text-[15px] text-white font-normal">© Copyright by teamsoft 2024</span>
-  </div>
 </div>
