--- a/rental-ui/rental-ui/src/app/component/rental/user/user.component.html
+++ b/rental-ui/rental-ui/src/app/component/rental/user/user.component.html
@@ -1,20 +1,23 @@
 
-<div class="inventual-managesale-area bg-white p-7 custom-shadow rounded-8 mb-5">
-    <h4 class="text-[20px] font-bold text-black mb-9">User List</h4>
-    <div class="inventual-material-btn mb-7">
-        <button mat-raised-button="" color="primary" class="mb-1 mdc-button mdc-button--raised mat-mdc-raised-button mat-primary mat-mdc-button-base" mat-ripple-loader-class-name="mat-mdc-button-ripple" tabindex="0" (click)="createUser()">
-            <span class="mat-mdc-button-persistent-ripple mdc-button__ripple"></span>
-            <mat-icon role="img" class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color" aria-hidden="true" data-mat-icon-type="font">add_circle_outline</mat-icon><span class="mdc-button__label"> Add New User</span>
-            <span class="mat-mdc-focus-indicator"></span><span class="mat-mdc-button-touch-target"></span><span class="mat-ripple mat-mdc-button-ripple"></span>
-        </button>
-    </div>
+<div class="inventual-managesale-area bg-white p-5 custom-shadow rounded-8 mb-2">
+    <h4 class="text-[20px] font-bold text-black mb-4">User List</h4>
+     
     <div class="inventual-table-header-search-area">
-        <div class="grid grid-cols-12 gap-x-5 mb-7 pb-0.5">
+        <div class="grid grid-cols-12 gap-x-5 mb-1 pb-0.5">
             <div class="col-span-5 md:col-span-6 sm:col-span-12">
                 <div class="inventual-table-header-search relative sm:mb-4">
                     <input type="text" placeholder="Search List" (keyup)="applyFilter($event)"/>
                     <span><mat-icon role="img" class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color" aria-hidden="true" data-mat-icon-type="font">search</mat-icon></span>
                 </div>
+            </div>
+            <div class="col-span-7 md:col-span-6 sm:col-span-12">
+            <div class="inventual-material-btn mb-5 pull-right">
+                <button mat-raised-button="" color="primary" class="mb-1 mdc-button mdc-button--raised mat-mdc-raised-button mat-primary mat-mdc-button-base" mat-ripple-loader-class-name="mat-mdc-button-ripple" tabindex="0" (click)="createUser()">
+                    <span class="mat-mdc-button-persistent-ripple mdc-button__ripple"></span>
+                    <mat-icon role="img" class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color" aria-hidden="true" data-mat-icon-type="font">add_circle_outline</mat-icon><span class="mdc-button__label"> Add New User</span>
+                    <span class="mat-mdc-focus-indicator"></span><span class="mat-mdc-button-touch-target"></span><span class="mat-ripple mat-mdc-button-ripple"></span>
+                </button>
+            </div>
             </div>
         </div>
     </div>
