--- a/rental-ui/rental-ui/src/styles.css
+++ b/rental-ui/rental-ui/src/styles.css
@@ -487,12 +487,12 @@ html {
 }
 
 html {
-    --mat-option-label-text-font: Roboto, sans-serif;
+    --mat-option-label-text-font: Nunito Sans, sans-serif;
     --mat-option-label-text-line-height: 24px;
     --mat-option-label-text-size: 16px;
     --mat-option-label-text-tracking: .03125em;
     --mat-option-label-text-weight: 400;
-    --mat-optgroup-label-text-font: Roboto, sans-serif;
+    --mat-optgroup-label-text-font: Nunito Sans, sans-serif;
     --mat-optgroup-label-text-line-height: 24px;
     --mat-optgroup-label-text-size: 16px;
     --mat-optgroup-label-text-tracking: .03125em;
@@ -506,12 +506,12 @@ html {
     --mdc-outlined-card-outline-color: rgba(0, 0, 0, .12);
     --mdc-outlined-card-container-elevation: 0px 0px 0px 0px rgba(0, 0, 0, .2), 0px 0px 0px 0px rgba(0, 0, 0, .14), 0px 0px 0px 0px rgba(0, 0, 0, .12);
     --mat-card-subtitle-text-color: rgba(0, 0, 0, .54);
-    --mat-card-title-text-font: Roboto, sans-serif;
+    --mat-card-title-text-font: Nunito Sans, sans-serif;
     --mat-card-title-text-line-height: 32px;
     --mat-card-title-text-size: 20px;
     --mat-card-title-text-tracking: .0125em;
     --mat-card-title-text-weight: 500;
-    --mat-card-subtitle-text-font: Roboto, sans-serif;
+    --mat-card-subtitle-text-font: Nunito Sans, sans-serif;
     --mat-card-subtitle-text-line-height: 22px;
     --mat-card-subtitle-text-size: 14px;
     --mat-card-subtitle-text-tracking: .0071428571em;
@@ -608,7 +608,7 @@ html {
 .mat-mdc-tooltip {
     --mdc-plain-tooltip-container-color: #616161;
     --mdc-plain-tooltip-supporting-text-color: #fff;
-    --mdc-plain-tooltip-supporting-text-font: Roboto, sans-serif;
+    --mdc-plain-tooltip-supporting-text-font: Nunito Sans, sans-serif;
     --mdc-plain-tooltip-supporting-text-size: 12px;
     --mdc-plain-tooltip-supporting-text-weight: 400;
     --mdc-plain-tooltip-supporting-text-tracking: .0333333333em
@@ -756,21 +756,21 @@ html {
 }
 
 html {
-    --mdc-filled-text-field-label-text-font: Roboto, sans-serif;
+    --mdc-filled-text-field-label-text-font: Nunito Sans, sans-serif;
     --mdc-filled-text-field-label-text-size: 16px;
     --mdc-filled-text-field-label-text-tracking: .03125em;
     --mdc-filled-text-field-label-text-weight: 400;
-    --mdc-outlined-text-field-label-text-font: Roboto, sans-serif;
+    --mdc-outlined-text-field-label-text-font: Nunito Sans, sans-serif;
     --mdc-outlined-text-field-label-text-size: 16px;
     --mdc-outlined-text-field-label-text-tracking: .03125em;
     --mdc-outlined-text-field-label-text-weight: 400;
-    --mat-form-field-container-text-font: Roboto, sans-serif;
+    --mat-form-field-container-text-font: Nunito Sans, sans-serif;
     --mat-form-field-container-text-line-height: 24px;
     --mat-form-field-container-text-size: 16px;
     --mat-form-field-container-text-tracking: .03125em;
     --mat-form-field-container-text-weight: 400;
     --mat-form-field-outlined-label-text-populated-size: 16px;
-    --mat-form-field-subscript-text-font: Roboto, sans-serif;
+    --mat-form-field-subscript-text-font: Nunito Sans, sans-serif;
     --mat-form-field-subscript-text-line-height: 20px;
     --mat-form-field-subscript-text-size: 12px;
     --mat-form-field-subscript-text-tracking: .0333333333em;
@@ -808,7 +808,7 @@ html .mat-mdc-form-field.mat-warn {
 }
 
 html {
-    --mat-select-trigger-text-font: Roboto, sans-serif;
+    --mat-select-trigger-text-font: Nunito Sans, sans-serif;
     --mat-select-trigger-text-line-height: 24px;
     --mat-select-trigger-text-size: 16px;
     --mat-select-trigger-text-tracking: .03125em;
@@ -820,12 +820,12 @@ html {
     --mdc-dialog-container-color: white;
     --mdc-dialog-subhead-color: rgba(0, 0, 0, .87);
     --mdc-dialog-supporting-text-color: rgba(0, 0, 0, .6);
-    --mdc-dialog-subhead-font: Roboto, sans-serif;
+    --mdc-dialog-subhead-font: Nunito Sans, sans-serif;
     --mdc-dialog-subhead-line-height: 32px;
     --mdc-dialog-subhead-size: 20px;
     --mdc-dialog-subhead-weight: 500;
     --mdc-dialog-subhead-tracking: .0125em;
-    --mdc-dialog-supporting-text-font: Roboto, sans-serif;
+    --mdc-dialog-supporting-text-font: Nunito Sans, sans-serif;
     --mdc-dialog-supporting-text-line-height: 24px;
     --mdc-dialog-supporting-text-size: 16px;
     --mdc-dialog-supporting-text-weight: 400;
@@ -893,7 +893,7 @@ html {
 }
 
 .mat-mdc-standard-chip {
-    --mdc-chip-label-text-font: Roboto, sans-serif;
+    --mdc-chip-label-text-font: Nunito Sans, sans-serif;
     --mdc-chip-label-text-line-height: 20px;
     --mdc-chip-label-text-size: 14px;
     --mdc-chip-label-text-tracking: .0178571429em;
@@ -975,7 +975,7 @@ html {
 
 .mat-mdc-slide-toggle {
     --mdc-switch-state-layer-size: 48px;
-    --mat-slide-toggle-label-text-font: Roboto, sans-serif;
+    --mat-slide-toggle-label-text-font: Nunito Sans, sans-serif;
     --mat-slide-toggle-label-text-size: 14px;
     --mat-slide-toggle-label-text-tracking: .0178571429em;
     --mat-slide-toggle-label-text-line-height: 20px;
@@ -986,7 +986,7 @@ html {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
     font-family: Roboto,sans-serif;
-    font-family: var(--mdc-typography-body2-font-family, var(--mdc-typography-font-family, Roboto, sans-serif));
+    font-family: var(--mdc-typography-body2-font-family, var(--mdc-typography-font-family, Nunito Sans, sans-serif));
     font-size: .875rem;
     font-size: var(--mdc-typography-body2-font-size, .875rem);
     line-height: 1.25rem;
@@ -1058,7 +1058,7 @@ html {
 .mat-mdc-radio-button .mdc-form-field {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-    font-family: var(--mdc-typography-body2-font-family, var(--mdc-typography-font-family, Roboto, sans-serif));
+    font-family: var(--mdc-typography-body2-font-family, var(--mdc-typography-font-family, Nunito Sans, sans-serif));
     font-size: var(--mdc-typography-body2-font-size, 14px);
     line-height: var(--mdc-typography-body2-line-height, 20px);
     font-weight: var(--mdc-typography-body2-font-weight, 400);
@@ -1118,7 +1118,7 @@ html {
 }
 
 .mat-mdc-slider {
-    --mdc-slider-label-label-text-font: Roboto, sans-serif;
+    --mdc-slider-label-label-text-font: Nunito Sans, sans-serif;
     --mdc-slider-label-label-text-size: 14px;
     --mdc-slider-label-label-text-line-height: 22px;
     --mdc-slider-label-label-text-tracking: .0071428571em;
@@ -1131,7 +1131,7 @@ html {
     --mat-menu-item-hover-state-layer-color: rgba(0, 0, 0, .04);
     --mat-menu-item-focus-state-layer-color: rgba(0, 0, 0, .04);
     --mat-menu-container-color: white;
-    --mat-menu-item-label-text-font: Roboto, sans-serif;
+    --mat-menu-item-label-text-font: Nunito Sans, sans-serif;
     --mat-menu-item-label-text-size: 16px;
     --mat-menu-item-label-text-tracking: .03125em;
     --mat-menu-item-label-text-line-height: 24px;
@@ -1277,17 +1277,17 @@ html {
 }
 
 .mat-mdc-list-base {
-    --mdc-list-list-item-label-text-font: Roboto, sans-serif;
+    --mdc-list-list-item-label-text-font: Nunito Sans, sans-serif;
     --mdc-list-list-item-label-text-line-height: 24px;
     --mdc-list-list-item-label-text-size: 16px;
     --mdc-list-list-item-label-text-tracking: .03125em;
     --mdc-list-list-item-label-text-weight: 400;
-    --mdc-list-list-item-supporting-text-font: Roboto, sans-serif;
+    --mdc-list-list-item-supporting-text-font: Nunito Sans, sans-serif;
     --mdc-list-list-item-supporting-text-line-height: 20px;
     --mdc-list-list-item-supporting-text-size: 14px;
     --mdc-list-list-item-supporting-text-tracking: .0178571429em;
     --mdc-list-list-item-supporting-text-weight: 400;
-    --mdc-list-list-item-trailing-supporting-text-font: Roboto, sans-serif;
+    --mdc-list-list-item-trailing-supporting-text-font: Nunito Sans, sans-serif;
     --mdc-list-list-item-trailing-supporting-text-line-height: 20px;
     --mdc-list-list-item-trailing-supporting-text-size: 12px;
     --mdc-list-list-item-trailing-supporting-text-tracking: .0333333333em;
@@ -1343,7 +1343,7 @@ html {
 }
 
 html {
-    --mat-paginator-container-text-font: Roboto, sans-serif;
+    --mat-paginator-container-text-font: Nunito Sans, sans-serif;
     --mat-paginator-container-text-line-height: 20px;
     --mat-paginator-container-text-size: 12px;
     --mat-paginator-container-text-tracking: .0333333333em;
@@ -1416,7 +1416,7 @@ html {
 
 .mat-mdc-tab-header {
     --mdc-secondary-navigation-tab-container-height: 48px;
-    --mat-tab-header-label-text-font: Roboto, sans-serif;
+    --mat-tab-header-label-text-font: Nunito Sans, sans-serif;
     --mat-tab-header-label-text-size: 14px;
     --mat-tab-header-label-text-tracking: .0892857143em;
     --mat-tab-header-label-text-line-height: 36px;
@@ -1498,7 +1498,7 @@ html {
 .mat-mdc-checkbox .mdc-form-field {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-    font-family: var(--mdc-typography-body2-font-family, var(--mdc-typography-font-family, Roboto, sans-serif));
+    font-family: var(--mdc-typography-body2-font-family, var(--mdc-typography-font-family, Nunito Sans, sans-serif));
     font-size: var(--mdc-typography-body2-font-size, 14px);
     line-height: var(--mdc-typography-body2-line-height, 20px);
     font-weight: var(--mdc-typography-body2-font-weight, 400);
@@ -1672,7 +1672,7 @@ html {
 .mdc-button {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-    font-family: var(--mdc-typography-button-font-family, var(--mdc-typography-font-family, Roboto, sans-serif));
+    font-family: var(--mdc-typography-button-font-family, var(--mdc-typography-font-family, Nunito Sans, sans-serif));
     font-size: var(--mdc-typography-button-font-size, 14px);
     line-height: var(--mdc-typography-button-line-height, 36px);
     font-weight: var(--mdc-typography-button-font-weight, 500);
@@ -1800,7 +1800,7 @@ html {
 .mdc-fab--extended {
     -moz-osx-font-smoothing: grayscale;
     -webkit-font-smoothing: antialiased;
-    font-family: var(--mdc-typography-button-font-family, var(--mdc-typography-font-family, Roboto, sans-serif));
+    font-family: var(--mdc-typography-button-font-family, var(--mdc-typography-font-family, Nunito Sans, sans-serif));
     font-size: var(--mdc-typography-button-font-size, 14px);
     line-height: var(--mdc-typography-button-line-height, 36px);
     font-weight: var(--mdc-typography-button-font-weight, 500);
@@ -1811,7 +1811,7 @@ html {
 }
 
 .mat-mdc-extended-fab {
-    --mdc-extended-fab-label-text-font: Roboto, sans-serif;
+    --mdc-extended-fab-label-text-font: Nunito Sans, sans-serif;
     --mdc-extended-fab-label-text-size: 14px;
     --mdc-extended-fab-label-text-tracking: .0892857143em;
     --mdc-extended-fab-label-text-weight: 500
@@ -1821,7 +1821,7 @@ html {
     --mdc-snackbar-container-color: #333333;
     --mdc-snackbar-supporting-text-color: rgba(255, 255, 255, .87);
     --mat-snack-bar-button-color: #ff4081;
-    --mdc-snackbar-supporting-text-font: Roboto, sans-serif;
+    --mdc-snackbar-supporting-text-font: Nunito Sans, sans-serif;
     --mdc-snackbar-supporting-text-line-height: 20px;
     --mdc-snackbar-supporting-text-size: 14px;
     --mdc-snackbar-supporting-text-weight: 400
@@ -1835,17 +1835,17 @@ html {
     --mat-table-header-container-height: 56px;
     --mat-table-footer-container-height: 52px;
     --mat-table-row-item-container-height: 52px;
-    --mat-table-header-headline-font: Roboto, sans-serif;
+    --mat-table-header-headline-font: Nunito Sans, sans-serif;
     --mat-table-header-headline-line-height: 22px;
     --mat-table-header-headline-size: 14px;
     --mat-table-header-headline-weight: 500;
     --mat-table-header-headline-tracking: .0071428571em;
-    --mat-table-row-item-label-text-font: Roboto, sans-serif;
+    --mat-table-row-item-label-text-font: Nunito Sans, sans-serif;
     --mat-table-row-item-label-text-line-height: 20px;
     --mat-table-row-item-label-text-size: 14px;
     --mat-table-row-item-label-text-weight: 400;
     --mat-table-row-item-label-text-tracking: .0178571429em;
-    --mat-table-footer-supporting-text-font: Roboto, sans-serif;
+    --mat-table-footer-supporting-text-font: Nunito Sans, sans-serif;
     --mat-table-footer-supporting-text-line-height: 20px;
     --mat-table-footer-supporting-text-size: 14px;
     --mat-table-footer-supporting-text-weight: 400;
@@ -1886,7 +1886,7 @@ html {
     background-color: var(--mat-badge-background-color);
     color: var(--mat-badge-text-color);
     font-family: Roboto,sans-serif;
-    font-family: var(--mat-badge-text-font, Roboto, sans-serif);
+    font-family: var(--mat-badge-text-font, Nunito Sans, sans-serif);
     font-size: 12px;
     font-size: var(--mat-badge-text-size, 12px);
     font-weight: 600;
@@ -2087,14 +2087,14 @@ html {
 }
 
 html {
-    --mat-badge-text-font: Roboto, sans-serif;
+    --mat-badge-text-font: Nunito Sans, sans-serif;
     --mat-badge-text-size: 12px;
     --mat-badge-text-weight: 600;
     --mat-badge-small-size-text-size: 9px;
     --mat-badge-large-size-text-size: 24px;
     --mat-bottom-sheet-container-text-color: rgba(0, 0, 0, .87);
     --mat-bottom-sheet-container-background-color: white;
-    --mat-bottom-sheet-container-text-font: Roboto, sans-serif;
+    --mat-bottom-sheet-container-text-font: Nunito Sans, sans-serif;
     --mat-bottom-sheet-container-text-line-height: 20px;
     --mat-bottom-sheet-container-text-size: 14px;
     --mat-bottom-sheet-container-text-tracking: .0178571429em;
@@ -2117,8 +2117,8 @@ html {
     --mat-standard-button-toggle-disabled-selected-state-background-color: #bdbdbd;
     --mat-standard-button-toggle-divider-color: #e0e0e0;
     --mat-standard-button-toggle-height: 48px;
-    --mat-legacy-button-toggle-text-font: Roboto, sans-serif;
-    --mat-standard-button-toggle-text-font: Roboto, sans-serif;
+    --mat-legacy-button-toggle-text-font: Nunito Sans, sans-serif;
+    --mat-standard-button-toggle-text-font: Nunito Sans, sans-serif;
     --mat-datepicker-calendar-date-selected-state-text-color: white;
     --mat-datepicker-calendar-date-selected-state-background-color: #3f51b5;
     --mat-datepicker-calendar-date-selected-disabled-state-background-color: rgba(63, 81, 181, .4);
@@ -2195,7 +2195,7 @@ html {
 }
 
 html {
-    --mat-datepicker-calendar-text-font: Roboto, sans-serif;
+    --mat-datepicker-calendar-text-font: Nunito Sans, sans-serif;
     --mat-datepicker-calendar-text-size: 13px;
     --mat-datepicker-calendar-body-label-text-size: 14px;
     --mat-datepicker-calendar-body-label-text-weight: 500;
@@ -2215,12 +2215,12 @@ html {
     --mat-expansion-header-indicator-color: rgba(0, 0, 0, .54);
     --mat-expansion-header-collapsed-state-height: 48px;
     --mat-expansion-header-expanded-state-height: 64px;
-    --mat-expansion-header-text-font: Roboto, sans-serif;
+    --mat-expansion-header-text-font: Nunito Sans, sans-serif;
     --mat-expansion-header-text-size: 14px;
     --mat-expansion-header-text-weight: 500;
     --mat-expansion-header-text-line-height: inherit;
     --mat-expansion-header-text-tracking: inherit;
-    --mat-expansion-container-text-font: Roboto, sans-serif;
+    --mat-expansion-container-text-font: Nunito Sans, sans-serif;
     --mat-expansion-container-text-line-height: 20px;
     --mat-expansion-container-text-size: 14px;
     --mat-expansion-container-text-tracking: .0178571429em;
@@ -2293,8 +2293,8 @@ html .mat-step-header.mat-warn {
 
 html {
     --mat-stepper-header-height: 72px;
-    --mat-stepper-container-text-font: Roboto, sans-serif;
-    --mat-stepper-header-label-text-font: Roboto, sans-serif;
+    --mat-stepper-container-text-font: Nunito Sans, sans-serif;
+    --mat-stepper-header-label-text-font: Nunito Sans, sans-serif;
     --mat-stepper-header-label-text-size: 14px;
     --mat-stepper-header-label-text-weight: 400;
     --mat-stepper-header-error-state-label-text-size: 16px;
@@ -2329,7 +2329,7 @@ html {
 html {
     --mat-toolbar-standard-height: 64px;
     --mat-toolbar-mobile-height: 56px;
-    --mat-toolbar-title-text-font: Roboto, sans-serif;
+    --mat-toolbar-title-text-font: Nunito Sans, sans-serif;
     --mat-toolbar-title-text-line-height: 32px;
     --mat-toolbar-title-text-size: 20px;
     --mat-toolbar-title-text-tracking: .0125em;
